--- a/Themes/GGO_Kirito/GGO_Kirito.theme.css
+++ b/Themes/GGO_Kirito/GGO_Kirito.theme.css
@@ -10,7 +10,7 @@
 @import url('https://raw.githack.com/VaporousCreeper/BetterDiscord-ThemesAndPlugins/master/Themes/GGO_Kirito/core.css');
 
 :root{
-    --background: url('https://images.alphacoders.com/632/632525.png');
+    --background: url('https://cdn.discordapp.com/attachments/906022348325535834/1167235140028747856/fornite_catjpg.jpg?ex=654d636f&is=653aee6f&hm=17202643651e49dc1fe9755ea8706de272455e6666ffee55a27fe68da0790613&');
     --activetext-colour: white;
 
     --primary1-colour: red;
