--- a/Themes/GGO_Kirito/core.css
+++ b/Themes/GGO_Kirito/core.css
@@ -1,5 +1,5 @@
     :root{
-     --background: url('https://cdn.discordapp.com/attachments/906022348325535834/1167235140028747856/fornite_catjpg.jpg?ex=654d636f&is=653aee6f&hm=17202643651e49dc1fe9755ea8706de272455e6666ffee55a27fe68da0790613&');
+     --background: url('https://cdn.discordapp.com/attachments/906022348325535834/1167237088626884639/image.png?ex=654d6540&is=653af040&hm=af8741d1c2382549899db08bb3af5e95b2ddf05c5370b980153d6039437d59dd&');
      --activetext-colour: white;
  
      --primary1-colour: red;
